--- a/tables.html
+++ b/tables.html
@@ -54,6 +54,12 @@
       </div>
   </div>
 
+   <footer class="footer">
+      <div class="container">
+          <p><a href="/api/tables">API Table Link</a> | <a href="/api/waitlist">API Wait List</a></p>
+      </div>
+    </footer>
+
   <script type="text/javascript">
     // Question: What does this code do?
     $("#add-btn").on("click", function(event) {
